# cess-advisor

./: .env.template  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build-backend.yml  deploy-backend.yml  deploy.yml
backend/: backend.opam  dune-project
backend/src/: auth.ml  dune  main.ml  middlewares.ml  utils.ml
backend/src/common/: dune  middlewares.ml  session.ml  session_deps.ml  utils.ml  validation.ml
backend/src/handlers/: dune  login.ml  reviews.ml  toilets.ml  users.ml  various.ml
database/: tables.sql
frontend/: .env.template  .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  vite.config.js
frontend/src/: app.html  index.css  index.jsx  main.jsx
frontend/src/components/: Authorization.jsx  Header.jsx  ProtectedRoute.jsx  Wrapper.jsx  footer.svelte  header.svelte  theme.svelte
frontend/src/components/home/: HomePage.jsx  ToiletCard.jsx
frontend/src/components/login/: LoginForm.jsx  LoginPage.jsx  RegisterForm.jsx
frontend/src/components/profile/: ProfilePage.jsx
frontend/src/components/toilets/: NewToiletPage.jsx  ReviewPage.jsx
frontend/src/routes/: +error.svelte  +layout.svelte  +page.server.js  +page.svelte
frontend/src/routes/login/: +page.server.js  +page.svelte
frontend/src/routes/logout/: +page.svelte
frontend/src/services/: login.js  reviews.js  toilets.js  users.js
frontend/src/utils/: checkAuth.js  customFetch.js  redirectCodes.js  regex.js  schemas.js
frontend/src/validations/: regex.js  review.js  toilet.js  user.js
(+15 files in other folders)
