(lang dune 3.10)

(name backend)

(generate_opam_files true)

(source
 (github Favo02/cess-advisor))

(authors "Luca Favini")

(maintainers "Luca Favini")

(license CC-BY-4.0)

(documentation https://github.com/Favo02/cess-advisor)

(package
 (name backend)
 (synopsis "REST API for Cess Advisor")
 (description "REST API for Cess Advisor, a toilet review system")
 (depends
  (ocaml (>= 5.0.0))
  (dune (>= 3.15.0))
  (sihl (>= 3.0.5))
  (caqti-driver-postgresql (>= 2.1.1))
  (lwt_ppx (>= 2.1.0))
  (ppx_yojson_conv (>= v0.16.0))
  (validate (>= 1.1.0))
  (safepass (>= 3.0))))
